"imagen de portada"

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     
     <title>Daniela Lopez /  Desarrollo Web Front-End</title>
     <!--favicon-->
-    <link rel="icon" type="image/x-icon" href="imagenes/">
+    <link rel="icon" type="image/x-icon" href="imagenes/icono.svg">
   </head>
   <body>
+    
      <!--banner-->
      <div class="banner">
         <div class="banner-container">
