--- a/producto.html
+++ b/producto.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header>
-    <h1>Detalles del producto:</h1>
+    <h1>Un recorrido mas detallado sobre este proyecto:</h1>
   </header>
 
     <div id="detalle-producto">
